crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__error@oracle.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: chain(error)
---
the data system did not answer
  caused by: column revenue_per_churned_subscription came back as a value that is not a finite number
  caused by: inf is not a finite number
