crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__params@oracle.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.params()
---
- Date: 2026-01-01
- Date: 2026-02-01
