crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__params@postgres.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.params()
---
- Date:
    year: 2026
    month: 1
    day: 1
- Date:
    year: 2026
    month: 2
    day: 1
