crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__plan@markdown.snap
---
source: crates/sutura-app/tests/golden/catalogs.rs
expression: plan
---
source: local
metric: revenue_per_churned_subscription
table: fct_subscription_monthly
joins: []
bucket:
  label: period
  grain: month
  column:
    table: fct_subscription_monthly
    column: month
keys: []
measure:
  ratio:
    numerator:
      aggregate:
        aggregate: sum
        column:
          table: fct_subscription_monthly
          column: mrr_cents
    denominator:
      count_if:
        column:
          table: fct_subscription_monthly
          column: churned_in_month
    zero_denominator: fails
measure_label: revenue_per_churned_subscription
filters:
  - origin: definition
    predicate:
      at_or_after:
        column:
          table: fct_subscription_monthly
          column: month
        param: 0
  - origin: definition
    predicate:
      before:
        column:
          table: fct_subscription_monthly
          column: month
        param: 1
params:
  - Date: 2026-01-01
  - Date: 2026-02-01
range:
  start: 2026-01-01
  end: 2026-02-01
max_rows: 10000
top: ~
