crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__sql@bigquery.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC(`fct_subscription_monthly`.`month`, MONTH) AS DATE) AS `period`, CAST(sum(`fct_subscription_monthly`.`mrr_cents`) AS FLOAT64) / sum(CASE WHEN `fct_subscription_monthly`.`churned_in_month` THEN 1 ELSE 0 END) AS `revenue_per_churned_subscription` FROM `fct_subscription_monthly` WHERE `fct_subscription_monthly`.`month` >= ? AND `fct_subscription_monthly`.`month` < ? GROUP BY CAST(DATE_TRUNC(`fct_subscription_monthly`.`month`, MONTH) AS DATE) ORDER BY CAST(DATE_TRUNC(`fct_subscription_monthly`.`month`, MONTH) AS DATE) NULLS LAST LIMIT 10001
