crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__sql@clickhouse.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) AS "period", CAST(CAST(tupleElement(if(toTypeName(sum("fct_subscription_monthly"."mrr_cents")) IN ('Int64', 'UInt64', 'Nullable(Int64)', 'Nullable(UInt64)'), tuple('Int128', CAST(sum(toInt128("fct_subscription_monthly"."mrr_cents")) AS Dynamic)), tuple(toTypeName(sum("fct_subscription_monthly"."mrr_cents")), CAST(sum("fct_subscription_monthly"."mrr_cents") AS Dynamic))), 2) AS Nullable(Float64)) AS Nullable(Float64)) / sum(CASE WHEN "fct_subscription_monthly"."churned_in_month" THEN 1 ELSE 0 END) AS "revenue_per_churned_subscription" FROM "fct_subscription_monthly" WHERE "fct_subscription_monthly"."month" >= ? AND "fct_subscription_monthly"."month" < ? GROUP BY CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) ORDER BY CAST(dateTrunc('month', "fct_subscription_monthly"."month") AS DATE) LIMIT 10001
