crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__sql@duckdb.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) AS "period", CAST(SUM("fct_subscription_monthly"."mrr_cents") AS DOUBLE) / SUM(CASE WHEN "fct_subscription_monthly"."churned_in_month" THEN 1 ELSE 0 END) AS "revenue_per_churned_subscription" FROM "fct_subscription_monthly" WHERE "fct_subscription_monthly"."month" >= ? AND "fct_subscription_monthly"."month" < ? GROUP BY CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) ORDER BY CAST(DATE_TRUNC('month', "fct_subscription_monthly"."month") AS DATE) LIMIT 10001
