crates/sutura-app/tests/snapshots/revenue-per-churned-subscription-january__sql@oracle.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT CAST(TRUNC("fct_subscription_monthly"."month", 'MM') AS DATE) AS "period", CAST(SUM("fct_subscription_monthly"."mrr_cents") AS DOUBLE PRECISION) / SUM(CASE WHEN "fct_subscription_monthly"."churned_in_month" THEN 1 ELSE 0 END) AS "revenue_per_churned_subscription" FROM "fct_subscription_monthly" WHERE "fct_subscription_monthly"."month" >= :1 AND "fct_subscription_monthly"."month" < :2 GROUP BY CAST(TRUNC("fct_subscription_monthly"."month", 'MM') AS DATE) ORDER BY CAST(TRUNC("fct_subscription_monthly"."month", 'MM') AS DATE) LIMIT 10001
